shipping left card gap issue solved

--- a/src/Components/Shipping.css
+++ b/src/Components/Shipping.css
@@ -259,6 +259,11 @@
         & .summmary-content-left {
           line-height: 2.5;
           margin-top: 1rem;
+          & h3{
+            font-size: 1rem;
+            width: 12rem;
+            margin-left: -2rem;
+          }
         }
 
         & .summmary-content-right {
